--- a/config.toml
+++ b/config.toml
@@ -4,20 +4,13 @@ picks = [
     "Annie",
     "Ashe",
     "Master Yi",
-    "Garen"
+    "Garen",
 ]
 
 # List of champions to ban in order of preference 
 bans = [
-    "Yasuo", 
-    "Zed",
     "Katarina",
+    "Yone",
+    "Veigar",
     "Lee Sin",
-    "Yone"
 ]
-
-# LCU client port (typically 12345)
-lcu_port = 12345
-
-# LCU client password (from lockfile)
-lcu_password = "your-password-here"
